<?xml version="1.0"?>
<package format="2">
  <name>rviz_meshfile_display</name>
  <description>Publish a meshfile to display in rviz</description>
  <version>0.0.0</version>
  <maintainer email="christian.koch@dfki.de">Christian Koch</maintainer>
  <author email="christian.koch@dfki.de">Christian Koch</author>
  <license>TODO</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <!-- __ProtectedRegion_begin__ packageStatements -->

  <!-- __ProtectedRegion_end__ packageStatements -->

</package>